hphp/hack/test/typecheck/lsb_nonstatic_disallowed.php
<?hh

class C {
  <<__LSB>> public int $id;

  public function __construct() {
    $this->id = 0;
  }
}
